adding rendering list

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -242,7 +242,7 @@
     </li><!-- End Dashboard Nav -->
 
     <li class="nav-item">
-      <a class="nav-link collapsed" href="#">
+      <a class="nav-link collapsed" href="{{ url_for('inventory.devices.devicelist') }}">
         <i class="bi-menu-button-wide"></i>
         <span>Unassigned devices</span>
       </a>
