--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -44,30 +44,34 @@
             <div class="tab-pane fade show active profile-overview" id="profile-overview">
 
               <h5 class="card-title">Computers</h5>
-
-              <div class="row">
-                <div class="col">Title</div>
-                <div class="col-1">DHID</div>
-                <div class="col">Tags</div>
-                <div class="col-1">Status</div>
-                <div class="col">Update</div>
-              </div>
-              {% for dev in devices %}
-
-              <div class="row">
-                <div class="col">{{ dev.type }} {{ dev.manufacturer }} {{ dev.model }}</div>
-                <div class="col-1">{{ dev.devicehub_id }}</div>
-                <div class="col">
-                    {% for t in dev.tags %}
-                        {{ t.code }}
+              <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col">Title</th>
+                      <th scope="col">DHID</th>
+                      <th scope="col">Tags</th>
+                      <th scope="col">Status</th>
+                      <th scope="col">Update</th>
+                      <th scope="col">Select all</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for dev in devices %}
+                    <tr>
+                      <td>{{ dev.type }} {{ dev.manufacturer }} {{ dev.model }}</td>
+                      <td>{{ dev.devicehub_id }}</td>
+                      <td>
+                        {% for t in dev.tags %}
+                            {{ t.code }}{% if not loop.last %},{% endif %}
+                        {% endfor %}
+                      </td>
+                      <td>{% if dev.status %}{{ dev.status }}{% endif %}</td>
+                      <td>{{ dev.updated.strftime('%H:%M %d-%m-%Y') }}</td>
+                      <td><input type="checkbox" /></td>
+                    </tr>
                     {% endfor %}
-                 </div>
-                <div class="col-1">{% if dev.status %}{{ dev.status }}{% endif %}</div>
-                <div class="col">{{ dev.updated.strftime('%H:%M %d-%m-%Y') }}</div>
-              </div>
-
-              {% endfor %}
-
+                  </tbody>
+              </table>
             </div>
 
             <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
