--- a/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_login.html
@@ -1,4 +1,7 @@
 {% extends "ereuse_devicehub/base.html" %}
+
+{% block page_title %}Login{% endblock %}
+
 {% block body %}
 <main>
   <div class="container">
