--- a/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/user_profile.html
@@ -1,4 +1,7 @@
 {% extends "ereuse_devicehub/base_site.html" %}
+
+{% block page_title %}Your Profile{% endblock %}
+
 {% block main %}
 
 <div class="pagetitle">
