--- a/ereuse_devicehub/templates/inventory/addinglot.html
+++ b/ereuse_devicehub/templates/inventory/addinglot.html
@@ -1,28 +1,39 @@
 <div class="modal fade" id="addingLotModal" tabindex="-1" style="display: none;" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
+
       <div class="modal-header">
         <h5 class="modal-title">Adding to a lot</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        Please write a name of a lot
-        <select class="form-control selectpicker" id="selectLot" data-live-search="true">
-          {% for lot in lots %}
-          <option value="{{ lot.id }}">{{ lot.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+
+      <form action="/inventory/lot/devices/add" method="post">
+      {# form.csrf_token #}
+        <div class="modal-body">
+          Please write a name of a lot
+          <select class="form-control selectpicker" id="selectLot" name="lot" data-live-search="true">
+            {% for lot in lots %}
+            <option value="{{ lot.id }}">{{ lot.name }}</option>
+            {% endfor %}
+          </select>
+          <input class="devicesList" type="hidden" name="devices" />
+          <p class="text-danger">
+              You need select first some device for adding this in a lot
+          </p>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <input type="submit" class="btn btn-primary d-none" value="Save changes" />
+        </div>
+      </form>
+
     </div>
   </div>
 </div>
 
 <script>
-$(function() {
-  $('#selectLot').selectpicker();
-});
+//$(function() {
+//  $('#selectLot').selectpicker();
+//});
 </script>
