adding the lots in the correct section

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -255,16 +255,15 @@
         <i class="bi bi-arrow-down-right"></i><span>Incoming Lots</span><i class="bi bi-chevron-down ms-auto"></i>
       </a>
       <ul id="incoming-lots-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+        {% for lot in lots %}
+        {% if lot.is_incominig %}
         <li>
-          <a href="#TODO incoming lot #1 details">
-            <i class="bi bi-circle"></i><span>Incoming lot #1</span>
+          <a href="{{ url_for('inventory.devices.lotdevicelist', id=lot.id) }}">
+            <i class="bi bi-circle"></i><span>{{ lot.name }}</span>
           </a>
         </li>
-        <li>
-          <a href="#TODO incoming lot #2 details">
-            <i class="bi bi-circle"></i><span>Incoming lot #2</span>
-          </a>
-        </li>
+        {% endif %}
+        {% endfor %}
       </ul>
     </li><!-- End Incoming Lots Nav -->
 
@@ -273,16 +272,15 @@
         <i class="bi bi-arrow-up-right"></i><span>Outgoing Lots</span><i class="bi bi-chevron-down ms-auto"></i>
       </a>
       <ul id="outgoing-lots-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+        {% for lot in lots %}
+        {% if lot.is_outgoing %}
         <li>
-          <a href="#TODO">
-            <i class="bi bi-circle"></i><span>Outgoing lot #1</span>
+          <a href="{{ url_for('inventory.devices.lotdevicelist', id=lot.id) }}">
+            <i class="bi bi-circle"></i><span>{{ lot.name }}</span>
           </a>
         </li>
-        <li>
-          <a href="#TODO">
-            <i class="bi bi-circle"></i><span>Outgoing lot #2</span>
-          </a>
-        </li>
+        {% endif %}
+        {% endfor %}
       </ul>
     </li><!-- End Outgoing Lots Nav -->
 
@@ -296,16 +294,15 @@
             <i class="bi bi-plus" style="font-size: larger;"></i><span>New temporal lot</span>
           </a>
         </li>
+        {% for lot in lots %}
+        {% if lot.is_temporary %}
         <li>
-          <a href="#TODO">
-            <i class="bi bi-circle"></i><span>Temporal lot #1</span>
+          <a href="{{ url_for('inventory.devices.lotdevicelist', id=lot.id) }}">
+            <i class="bi bi-circle"></i><span>{{ lot.name }}</span>
           </a>
         </li>
-        <li>
-          <a href="#TODO">
-            <i class="bi bi-circle"></i><span>Temporal lot #2</span>
-          </a>
-        </li>
+        {% endif %}
+        {% endfor %}
       </ul>
     </li><!-- End Temporal Lots Nav -->
 
