view for create an edit the a lot

--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -290,7 +290,7 @@
       </a>
       <ul id="temporal-lots-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
         <li>
-          <a href="#TODO">
+          <a href="{{ url_for('inventory.devices.lot_add')}}">
             <i class="bi bi-plus" style="font-size: larger;"></i><span>New temporal lot</span>
           </a>
         </li>
