add lot name in the breadcrumb

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -7,8 +7,18 @@
   <nav>
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="index.html">Inventory</a></li>
-      <li class="breadcrumb-item">Devices</li>
+      {% if not lot %}
       <li class="breadcrumb-item active">Unassgined</li>
+      {% elif lot.is_temporary %}
+      <li class="breadcrumb-item active">Temporal Lot</li>
+      <li class="breadcrumb-item active">{{ lot.name }}</li>
+      {% elif lot.is_incominig %}
+      <li class="breadcrumb-item active">Incoming Lot</li>
+      <li class="breadcrumb-item active">{{ lot.name }}</li>
+      {% elif lot.is_outgoing %}
+      <li class="breadcrumb-item active">Outgoing Lot</li>
+      <li class="breadcrumb-item active">{{ lot.name }}</li>
+      {% endif %}
     </ol>
   </nav>
 </div><!-- End Page Title -->
