--- a/ereuse_devicehub/templates/inventory/removinglot.html
+++ b/ereuse_devicehub/templates/inventory/removinglot.html
@@ -2,16 +2,31 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Remove from a lot</h5>
+        <h5 class="modal-title">Remove from lot</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">
-        Please select a lot
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+
+      <form action="{{ url_for('inventory.devices.lot_devices_del') }}" method="post">
+      {{ form_lot_device.csrf_token }}
+        <div class="modal-body">
+          Please write a name of a lot
+          <select class="form-control selectpicker" id="selectLot" name="lot" data-live-search="true">
+            {% for lot in lots %}
+            <option value="{{ lot.id }}">{{ lot.name }}</option>
+            {% endfor %}
+          </select>
+          <input class="devicesList" type="hidden" name="devices" />
+          <p class="text-danger">
+              You need select first some device for remove this from a lot
+          </p>
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <input type="submit" class="btn btn-primary d-none" value="Save changes" />
+        </div>
+      </form>
+
     </div>
   </div>
 </div>
