--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -33,11 +33,19 @@
           <!-- Bordered Tabs -->
 
             <div class="btn-group dropdown ml-1">
+              {% if lot and lot.is_temporary and not lot.devices %}
+              <a href="{{ url_for('inventory.devices.lot_del', id=lot.id)}}" type="button" class="btn btn-primary">
+                <i class="bi bi-trash"></i>
+                Remove Lot
+                <span class="caret"></span>
+              </a>
+              {% else %}
               <button id="btnLots" type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-folder2"></i>
                 Lots
                 <span class="caret"></span>
               </button>
+              {% endif %}
               <ul class="dropdown-menu" aria-labelledby="btnLots"">
                 <li>
                   <a href="javascript:void()" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#addingLotModal">
