add actions in menu New actions

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -67,17 +67,80 @@
                   <i class="bi bi-plus"></i>
                   New Actions
               </button>
-              <ul class="dropdown-menu" aria-labelledby="btnLots"">
+              <ul class="dropdown-menu" aria-labelledby="btnActions"">
                 <li>
-                  <a href="javascript:openAdd()" class="dropdown-item">
-                    <i class="bi bi-plus"></i>
-                    Añadir dispositivos a lotes
+                    Status actions
+                </li>
+                <li>
+                  <a href="javascript:actionRecycling()" class="dropdown-item">
+                    <i class="bi bi-recycle"></i>
+                    Recycling
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:openRemove()" class="dropdown-item">
-                    <i class="fa fa-fw fa-minus"></i>
-                    Eliminar dispisitvos de lotes
+                  <a href="javascript:actionUse()" class="dropdown-item">
+                    <i class="bi bi-play-circle-fill"></i>
+                    Use
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:actionRefurbish()" class="dropdown-item">
+                    <i class="bi bi-tools"></i>
+                    Refurbish
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:actionManagement()" class="dropdown-item">
+                    <i class="bi bi-mastodon"></i>
+                    Management
+                  </a>
+                </li>
+                <li>
+                    Allocation
+                </li>
+                <li>
+                  <a href="javascript:actionAllocate()" class="dropdown-item">
+                    <i class="bi bi-house-fill"></i>
+                    Allocate
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:actionDeallocate()" class="dropdown-item">
+                    <i class="bi bi-house"></i>
+                    Deallocate
+                  </a>
+                </li>
+                <li>
+                    Physical actions
+                </li>
+                <li>
+                  <a href="javascript:actionToPrepare()" class="dropdown-item">
+                    <i class="bi bi-tools"></i>
+                    ToPrepare
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:actionPrepare()" class="dropdown-item">
+                    <i class="bi bi-egg"></i>
+                    Prepare
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:actionDataWipe()" class="dropdown-item">
+                    <i class="bi bi-eraser-fill"></i>
+                    DataWipe
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:actionToRepair()" class="dropdown-item">
+                    <i class="bi bi-screwdriver"></i>
+                    ToRepair
+                  </a>
+                </li>
+                <li>
+                  <a href="javascript:actionReady()" class="dropdown-item">
+                    <i class="bi bi-check2-all"></i>
+                    Ready
                   </a>
                 </li>
               </ul>
