refactoring actions of javascript

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -72,25 +72,25 @@
                     Status actions
                 </li>
                 <li>
-                  <a href="javascript:actionRecycling()" class="dropdown-item">
+                  <a href="javascript:newAction('Recycling')" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#actionModal">
                     <i class="bi bi-recycle"></i>
                     Recycling
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionUse()" class="dropdown-item">
+                  <a href="javascript:newAction('Use')" class="dropdown-item">
                     <i class="bi bi-play-circle-fill"></i>
                     Use
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionRefurbish()" class="dropdown-item">
+                  <a href="javascript:newAction('Refurbish')" class="dropdown-item">
                     <i class="bi bi-tools"></i>
                     Refurbish
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionManagement()" class="dropdown-item">
+                  <a href="javascript:newAction('Management')" class="dropdown-item">
                     <i class="bi bi-mastodon"></i>
                     Management
                   </a>
@@ -99,13 +99,13 @@
                     Allocation
                 </li>
                 <li>
-                  <a href="javascript:actionAllocate()" class="dropdown-item">
+                  <a href="javascript:newAction('Allocate')" class="dropdown-item">
                     <i class="bi bi-house-fill"></i>
                     Allocate
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionDeallocate()" class="dropdown-item">
+                  <a href="javascript:newAction('Deallocate')" class="dropdown-item">
                     <i class="bi bi-house"></i>
                     Deallocate
                   </a>
@@ -114,31 +114,31 @@
                     Physical actions
                 </li>
                 <li>
-                  <a href="javascript:actionToPrepare()" class="dropdown-item">
+                  <a href="javascript:newAction('ToPrepare')" class="dropdown-item">
                     <i class="bi bi-tools"></i>
                     ToPrepare
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionPrepare()" class="dropdown-item">
+                  <a href="javascript:newAction('Prepare')" class="dropdown-item">
                     <i class="bi bi-egg"></i>
                     Prepare
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionDataWipe()" class="dropdown-item">
+                  <a href="javascript:newAction('DataWipe')" class="dropdown-item">
                     <i class="bi bi-eraser-fill"></i>
                     DataWipe
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionToRepair()" class="dropdown-item">
+                  <a href="javascript:newAction('ToRepair')" class="dropdown-item">
                     <i class="bi bi-screwdriver"></i>
                     ToRepair
                   </a>
                 </li>
                 <li>
-                  <a href="javascript:actionReady()" class="dropdown-item">
+                  <a href="javascript:newAction('Ready')" class="dropdown-item">
                     <i class="bi bi-check2-all"></i>
                     Ready
                   </a>
