first step for render actions view

--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -1,9 +1,9 @@
 <div class="modal fade" id="actionModal" tabindex="-1" style="display: none;" aria-hidden="true">
-  <div class="modal-dialog">
+  <div class="modal-dialog modal-fullscreen">
     <div class="modal-content">
 
       <div class="modal-header">
-        <h5 class="modal-title">Adding to a lot</h5>
+        <h5 class="modal-title">New Action</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
@@ -11,20 +11,15 @@
       {{ form_lot_device.csrf_token }}
         <div class="modal-body">
           Please write a name of a lot
-          <select class="form-control selectpicker" id="selectLot" name="lot" data-live-search="true">
-            {% for lot in lots %}
-            <option value="{{ lot.id }}">{{ lot.name }}</option>
-            {% endfor %}
-          </select>
           <input class="devicesList" type="hidden" name="devices" />
           <p class="text-danger">
-              You need select first some device for adding this in a lot
+              You need select first some device before to do one action
           </p>
         </div>
 
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <input type="submit" class="btn btn-primary d-none" value="Save changes" />
+          <input type="submit" class="btn btn-primary d-none" value="Create" />
         </div>
       </form>
 
