--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -232,6 +232,7 @@
 </section>
 {% include "inventory/addinglot.html" %}
 {% include "inventory/removinglot.html" %}
+{% include "inventory/actions.html" %}
 
 <!-- CDN -->
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest"></script>
