--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -28,6 +28,17 @@
 
     <div class="col-xl-12">
 
+      {% if lot %}
+      <div class="card">
+        <div class="card-body pt-3">
+          <!-- Bordered Tabs -->
+
+            <div class="col-12">
+                <h3><a href="{{ url_for('inventory.devices.lot_edit', id=lot.id) }}">{{ lot.name }}</a></h3>
+            </div>
+        </div>
+      </div>
+      {% endif %}
       <div class="card">
         <div class="card-body pt-3">
           <!-- Bordered Tabs -->
