add view, lot and type in formulary new action

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -78,12 +78,13 @@
                   <i class="bi bi-plus"></i>
                   New Actions
               </button>
+              <a href="javascript:void()" class="d-none" id="activeActionModal" data-bs-toggle="modal" data-bs-target="#actionModal" />
               <ul class="dropdown-menu" aria-labelledby="btnActions"">
                 <li>
                     Status actions
                 </li>
                 <li>
-                  <a href="javascript:newAction('Recycling')" class="dropdown-item" data-bs-toggle="modal" data-bs-target="#actionModal">
+                  <a href="javascript:newAction('Recycling')" class="dropdown-item">
                     <i class="bi bi-recycle"></i>
                     Recycling
                   </a>
