--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -7,7 +7,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
 
-      <form action="{{ url_for('inventory.devices.lot_devices_add') }}" method="post">
+      <form action="{{ url_for('inventory.devices.action_add') }}" method="post">
       {{ form_new_action.csrf_token }}
         <div class="modal-body">
           <p class="text-danger">
@@ -15,8 +15,10 @@
           </p>
           {% for field in form_new_action %}
           {% if field != form_new_action.csrf_token %}
-          {% if field == form_new_action.devices %}
+          {% if field == form_new_action.devices  %}
           {{ field(class_="devicesList") }}
+          {% elif field == form_new_action.lot %}
+            {{ field(class_="form-control") }}
           {% else %}
           <div class="col-12">
               {{ field.label(class_="form-label") }}
