fix click in modal action page

--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -78,7 +78,7 @@
                   <i class="bi bi-plus"></i>
                   New Actions
               </button>
-              <a href="javascript:void()" class="d-none" id="activeActionModal" data-bs-toggle="modal" data-bs-target="#actionModal" />
+              <span class="d-none" id="activeActionModal" data-bs-toggle="modal" data-bs-target="#actionModal"></span>
               <ul class="dropdown-menu" aria-labelledby="btnActions"">
                 <li>
                     Status actions
