action form standart

--- a/ereuse_devicehub/templates/inventory/actions.html
+++ b/ereuse_devicehub/templates/inventory/actions.html
@@ -19,6 +19,8 @@
           {{ field(class_="devicesList") }}
           {% elif field == form_new_action.lot %}
             {{ field(class_="form-control") }}
+          {% elif field == form_new_action.type %}
+            {{ field(class_="form-control") }}
           {% else %}
           <div class="col-12">
               {{ field.label(class_="form-label") }}
