--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -6,7 +6,7 @@
   <h1>Inventory</h1>
   <nav>
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Inventory</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('inventory.devices.devicelist')}}">Inventory</a></li>
       {% if not lot %}
       <li class="breadcrumb-item active">Unassgined</li>
       {% elif lot.is_temporary %}
@@ -219,8 +219,8 @@
                     {% for dev in devices %}
                     <tr>
                       <td><input type="checkbox" class="deviceSelect" data="{{ dev.id }}"/></td>
-                      <td>{{ dev.type }} {{ dev.manufacturer }} {{ dev.model }}</td>
-                      <td>{{ dev.devicehub_id }}</td>
+                      <td><a href={{ url_for('inventory.devices.device_details', id=dev.devicehub_id)}}>{{ dev.type }} {{ dev.manufacturer }} {{ dev.model }}</a></td>
+                      <td><a href={{ url_for('inventory.devices.device_details', id=dev.devicehub_id)}}>{{ dev.devicehub_id }}</a></td>
                       <td>
                         {% for t in dev.tags | sort(attribute="id") %}
                             {{ t.id }}{% if not loop.last %},{% endif %}
